# autochown

./: CHANGELOG  CMakeLists.txt  README.md  autochown.service  autochownd  autochownd.conf  version.h
man.md/: autochown.1.md
scripts/: build.sh  clean.sh
src/: common.c  common.h  file_parser.c  file_parser.h  inotify.c  inotify.h  main.c  rbt.h
src/rbt/: common.h  debug.h  key.h  node.h  set.h  traverse_with_key.h  wrapper.h
src/rbt/concurrency/: node_pthread.h
